--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,3 @@
 {
-  "crons": [
-    {
-      "path": "/api/cron/process-jobs",
-      "schedule": "* * * * *"
-    },
-    {
-      "path": "/api/cron/daily",
-      "schedule": "0 0 * * *"
-    },
-    {
-      "path": "/api/cron/monthly",
-      "schedule": "0 0 1 * *"
-    }
-  ]
+  "version": 2
 }
