--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "date-fns": "^4.1.0",
     "ioredis": "^5.8.2",
     "lucide-react": "^0.552.0",
-    "next": "14.2.18",
+    "next": "^14.2.25",
     "postcss": "^8.5.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
