--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "recharts": "^3.3.0",
     "redis": "^5.9.0",
     "resend": "^6.4.0",
+    "sonner": "^2.0.7",
     "stripe": "^19.2.0",
     "svix": "^1.81.0",
     "swagger-jsdoc": "^6.2.8",
