Fix init-db.js to run AFTER build with verbose logging
- Moved init-db.js to run AFTER next build (not before)
- Added postbuild hook as fallback
- Added verbose console logging to see if script runs
- Will clearly show in Vercel logs if DB init succeeds

This should finally add the missing columns to Supabase production DB.

--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && node prisma/init-db.js && next build",
+    "build": "prisma generate && next build",
+    "postbuild": "node prisma/init-db.js || echo 'Init DB skipped'",
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate",
-    "vercel-build": "prisma generate && node prisma/init-db.js && next build",
+    "vercel-build": "prisma generate && next build && node prisma/init-db.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
